# ProjetClassification

./: app.py  test_features.py  test_lib.py
application/client/: cli.py
application/server/: app.py
data/models/: linear_model_pure.npz  normalization_stats.npz
data/raw/christ_redeemer/: image_7.avif
lib/: CMakeLists.txt
lib/include/: linear_model.h  mlp.h  rbf.h
lib/src/: linear_model.c  mlp.c  rbf.c
notebooks/: rapport_interactif.ipynb
preprocessing/: image_processor.py
python_api/: ml_bridge.py  rbf_bridge.py
scripts/: download_dataset.py  train_mlp.py  train_models.py  train_rbf.py
templates/: index.html
test_cases/: X_test.npy  X_train.npy  y_test.npy  y_train.npy
tests/: generate_test_data.py  results.json  run_all_tests.py  test_linear.py  test_mlp.py  test_models.py  test_rbf.py  test_simple.py
tests/data/: test_data.npz
